--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
 		<engine name="cordova" version=">=3.0.0" />
 	</engines>  
 	
-	<dependency id="org.apache.cordova.file" version="1.0.1" />
+	<dependency id="cordova-plugin-file" version="1.0.1" />
 
 	<js-module src="www/imageresize.js" name="ImageResizePlugin">
 		<clobbers target="plugins.imageResizer" />
@@ -46,6 +46,6 @@
 			</feature>
 		</config-file>
 
-		<source-file src="src/Android/com/raananw/ImageResizer/ImageResizePlugin.java" target-dir="src/com/raananws" />
+		<source-file src="src/Android/com/raananw/ImageResizer/ImageResizePlugin.java" target-dir="src/com/raananw" />
 	</platform>
 </plugin>
